tests/cases/should_fail/literals/dangling_paren_tree.stderr
error: encountered unclosed delimiter `(`, add a `)` after the inner expression
 --> $DIR/dangling_paren_tree.hash:3:2
2 |   func_call();
3 |   k(
  |    ^ here
